# name_distribution

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/data/: most-common-surnames-multi-year-data.csv
