[package]
name = "name_distribution"
description = "Tool for distributing surnames across buckets based on frequency of occurrance in Scotland"
license = "MIT"
version = "0.2.0"
authors = ["Stuart Roebuck <stuart.roebuck@gmail.com>"]
edition = "2018"
build = "build.rs"
readme = "README.md"

[build-dependencies]
csv = "1.1.3"

[dependencies]
clap = "2.33.0"
csv = "1.1.3"
